Noch zu machen: Sponsoren - Durchswitchen Überschrift - Anfahrt Karte Anfahrt

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                
                 <div class="row">
                     <div class="book">
-                        <div id="map" style=position: relative;">
+                        <div id="map" style="position: relative;">
                             <script defer='defer' type='text/javascript' src='https://maps.doris.at/embedded.ashx?zoom=4&layer=op&arcgiscomQueryLayerID=37&
                             arcgiscomQueryField=nr&arcgiscomQueryValue=2&arcgiscomid=860f781e0f3340a4a181deeb9d130bda&
                             layerswitcher=yes&arcgiscomQueryHighlight=true&search=yes'></script>
