--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
 
             <div class="header__text-box">
                 <h1 class="heading-primary">
-                    <span class="heading-primary__main">Musikfest</span>
-                    <span class="heading-primary__sub">Hier gibts spass</span>
+                    <span class="heading-primary--main">Musikfest</span>
+                    <span class="heading-primary--sub">Hier gibts spass</span>
                 </h1>
             </div>
         </header>
 
         <main>
             <section class="section-tours" id="section-tours">
-                <div class="u-center-text u-margin-bottom-big">
+                <div class="u-center-text u-margin-bottom-small">
                     <h2 class="heading-secondary">
                         Programm
                     </h2>
@@ -140,7 +140,13 @@
                 </div>
 
             </section>
-
+            <section>
+                <div class="u-center-text u-margin-bottom-big">
+                    <h2 class="heading-secondary">
+                        <span class="heading-secondary--sponsoren">Sponsoren</span>
+                    </h2>
+                </div>
+            </section>
             <section class="section-features1">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
@@ -153,9 +159,9 @@
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-world"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Sponsor 1</h3>
-                            <p class="feature-box__text">
+                            <!--<p class="feature-box__text">
                                 Hier könnte dein Text stehen
-                            </p>
+                            </p>-->
                         </div>
                     </div>
 
@@ -194,9 +200,9 @@
                         <div class="feature-box">
                             <i class="feature-box__icon icon-basic-world"></i>
                             <h3 class="heading-tertiary u-margin-bottom-small">Sponsor 1</h3>
-                            <p class="feature-box__text">
+                            <!--<p class="feature-box__text">
                                 Hier könnte dein Text stehen
-                            </p>
+                            </p>-->
                         </div>
                     </div>
 
@@ -235,9 +241,12 @@
                 <div class="row">
                     <div class="book">
                         <div id="map" style="position: relative;">
-                            <script defer='defer' type='text/javascript' src='https://maps.doris.at/embedded.ashx?zoom=4&layer=op&arcgiscomQueryLayerID=37&
+                            <!--<script defer='defer' type='text/javascript' src='https://maps.doris.at/embedded.ashx?zoom=8&layer=of&arcgiscomQueryLayerID=37&
                             arcgiscomQueryField=nr&arcgiscomQueryValue=2&arcgiscomid=860f781e0f3340a4a181deeb9d130bda&
-                            layerswitcher=yes&arcgiscomQueryHighlight=true&search=yes'></script>
+                            layerswitcher=yes&arcgiscomQueryHighlight=true&search=yes'></script>-->
+                            <script defer='defer' type='text/javascript' src='https://maps.doris.at/embedded.ashx?zoom=7&layer=op&
+                            arcgiscomid=860f781e0f3340a4a181deeb9d130bda&
+                            layerswitcher=yes&arcgiscomQueryHighlight=true&search=yes&x=68440&y=339230&marker_x=68480&marker_y=339170'></script>
                          </div>
                         <!-- 
                         <div class="book__form">
