--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 
             <section class="section-features4">
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
+                    <h2 class="heading-sponsor">
                         Platin
                     </h2>
                 </div>
@@ -226,7 +226,7 @@
             
             <section class="section-features2">
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
+                    <h2 class="heading-sponsor">
                         Gold
                     </h2>
                 </div>
@@ -268,7 +268,7 @@
 
             <section class="section-features3">
                 <div class="u-center-text u-margin-bottom-big">
-                    <h2 class="heading-secondary">
+                    <h2 class="heading-sponsor">
                         Silber
                     </h2>
                 </div>
