added marker to mapbox

--- a/index.html
+++ b/index.html
@@ -295,7 +295,13 @@
                 <p class="footer__copyright">
                     Design Copyright &copy; by Jonas Schmedtmann.
                 </p>
-            </div>
+                <p class="footer__copyright">
+                    <a href="https://www.flaticon.com/free-icons/tent" title="tent icons">Tent icons created by Smashicons - Flaticon</a>
+                </p>
+                <p class="footer__copyright"> 
+                    <a href="https://www.flaticon.com/free-icons/parade" title="parade icons">Parade icons created by Freepik - Flaticon</a>
+                </p>
+                </div>
         </div>
     </footer>
 </body>
